--- a/templates/category_items.html
+++ b/templates/category_items.html
@@ -6,32 +6,31 @@
     <div class="container">
 
       <!-- Page Heading -->
-      <h1 class="my-4">Joe's Car Lot</h1>
         <br>
-        <h3></h3><small>Category:  {{category.category}}</small>
-      </h3>
+        <h3>Category:  {{category.category}}</h3>
       <br>
-      <a href="{{url_for('create_car_for_category', category_id=category.id)}}">Click Here to Enter and Sell Your Vehicle</a>
+      <a href="{{url_for('create_car_for_category', category_id=category.id)}}"><h5>Click Here to Enter and Sell Your Vehicle</h5></a>
       <br>
-      <br>
-      <a href="{{url_for('category')}}">Return</a>
+      <a href="{{url_for('category')}}"><h5>Return to Homepage</h5></a>
+
       
       {%for car in cars%}
 
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="#" src="{{car.car_item_pic}}" alt="">
+            <img class="#" {%if car.car_item_pic%} src="{{car.car_item_pic}}" {%else%} src="http://via.placeholder.com/600x400" {%endif%} alt="">
           </a>
         </div>
         <div class="col-md-5">
           <h3><span> {{car.year}} </span><span> {{car.make}} </span><span> {{car.model}} </span></h3>
           <br>
-          <h3>{{car.price}}</h3>
+          <h6>Price: {{car.price}}</h6>
+          <h6>Milage: {{car.milage}}</h6>
           <br>
-          <p>{{car.description}}</p>
+          <p>Seller's Notes:  {{car.description}}</p>
           <br>
-          <a {% if car.garage_id %} href="{{url_for('car_from_garage', garage_id=car.garage_id, car_id=car.id)}}" {%else%} href="{{url_for('car_from_category', category_id=category.id, car_id=car.id)}}" {%endif%}>Get Details</a>
+          <a {% if car.garage_id %} href="{{url_for('car_from_garage', garage_id=car.garage_id, car_id=car.id)}}" {%else%} href="{{url_for('car_from_category', category_id=category.id, car_id=car.id)}}" {%endif%}><h5>Get Details<h5></a>
           
         </div>
       </div>
