--- a/templates/category_purchase.html
+++ b/templates/category_purchase.html
@@ -6,15 +6,11 @@
     <div class="container">
 
       <!-- Page Heading -->
-      <h1 class="my-4">Joe's Car Lot</h1>
+        <h3 class="my-4">Category:  {{category.category}}</h3>
         <br>
-        <br>
-        <a href="{{url_for('car_from_category', category_id=category.id, car_id=car.id)}}">
-              <button class="btn btn-default delete">
-              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Return</button>
-              </a>
-    
-
+          <a href="{{url_for('car_from_category', category_id=category.id, car_id=car.id)}}">
+                <h5>Go Back</h5>
+                </a>
       <div class="row">
         <div class="col-md-7">
           <a href="#">
@@ -24,11 +20,10 @@
         <div class="col-md-5">
           <h3>Thank you for your interest in purchasing:  <span> {{car.year}} </span><span> {{car.make}} </span><span> {{car.model}} </span></h3>
           <br>
-          <h3>Color: {{car.color}}</h3>
+          <h6>Price:  {{car.price}}</h6>
+          <h6>Milage:  {{car.milage}}</h6>
           <br>
-          <h3>Price:  {{car.price}}</h3>
-          <br>
-          <h3>From Seller: {{user.name}}</h3>
+          <h6>From Seller: {{user.name}}</h6>
           <br>
           </div>
       </div>
@@ -40,14 +35,14 @@
             <label for="name">Your Name:</label>
             <input type ="text" maxlength="150" name="name" placeholder="Name">
             <br>
-            <label for="email">Your Email:</label>
+            <label for="email">Your Email: (REQUIRED)</label>
             <input type ="text" maxlength="150" name="email" placeholder="sample@email.com">
             <br>
             <label for="bid">Your Bid: </label>
             <input type ="text" maxlength="150" name="bid" placeholder="">
             <br>
             <label for="message">Message to Seller:</label>
-            <textarea maxlength="250" rows="3" name="description" placeholder="type message here"></textarea>
+            <textarea maxlength="250" rows="3" name="mymessage" placeholder="type message here"></textarea>
             <br>
             <button type="submit" class="btn btn-default" id="submit" type="submit">
             <span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Submit</button>
