--- a/templates/category_specific_car_not_owner.html
+++ b/templates/category_specific_car_not_owner.html
@@ -6,12 +6,9 @@
     <div class="container">
 
       <!-- Page Heading -->
-      <h3 class="my-4">Category:  {{category.category}}</h3>
-      <br>
-      <a href="{{url_for('category_items', category_id=category.id)}}">
-              <h5>Go Back</h5>
-              </a>
-      
+      <h1 class="my-4">Joe's Car Lot
+        <small>{{category.category}}</small>
+      </h1>
       <div class="row">
         <div class="col-md-7">
           <a href="#">
@@ -21,15 +18,17 @@
         <div class="col-md-5">
           <h3><span>{{car.year}} </span><span> {{car.make}} </span><span> {{car.model}}</span></h3>
           <br>
-          <h6>Price: {{car.price}}</h6>
-          <h6>Milage:  {{car.milage}}</h6>
+          <h3>{{car.price}}</h3>
           <br>
-          <p>Seller's Note:  {{car.description}}</p>
+          <h3>{{car.color}}</h3>
+          <br>
+          <p>{{car.description}}</p>
           <br>
           <a class="btn btn-primary" href="{{url_for('purchase_from_category', category_id=category.id, car_id=car.id)}}">Contact Seller</a>
           <br>
-          <a href="{{url_for('category')}}">
-              <h6>Return to Homepage</h6>
+          <a href="{{url_for('category_items', category_id=category.id)}}">
+              <button class="btn btn-default delete">
+              <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>Return</button>
               </a>
         </div>
       </div>
