--- a/templates/garage.html
+++ b/templates/garage.html
@@ -6,32 +6,31 @@
     <div class="container">
 
       <!-- Page Heading -->
-      <h3 class="my-4">WELCOME TO: {{garage.name}}
-      </h3>
+      <h1 class="my-4">Joe's Car Lot
+        <small>WELCOME TO: {{garage.name}}</small>
+      </h1>
       <br>
-      <h5>Garage Owner:  {{user.name}}</h5>
+      <h3>Garage Owner:  {{user.name}}</h3>
       <br>
-      <a href="{{url_for('category')}}">
-              <h4>Return to Homepage</h4>
-              </a>
+      <a href="{{url_for('create_car_garage', garage_id=garage.id)}}">Enter and Sell a Vehicle</a>
 
       {%for car in cars%}
 
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="#" src="{{car.car_item_pic}}" alt="">
+            <img class="#" src="http://placehold.it/600x300" alt="">
           </a>
         </div>
         <div class="col-md-5">
           <h3><span> {{car.year}} </span><span> {{car.make}} </span><span> {{car.model}} </span></h3>
           <br>
-          <h6>Price: {{car.price}}</h6>
-          <h6>Milage: {{car.milage}}</h6>
+          <h3>{{car.price}}</h3>
           <br>
-          <p>Seller's Notes:  {{car.description}}</p>
-          <br>
-          <a class="btn btn-primary" href="{{url_for('car_from_garage', garage_id=garage.id, car_id=car.id)}}"><h5>Details</h5></a>
+          <p>{{car.description}}</p>
+
+          
+          <a class="btn btn-primary" href="url_for('purchase_from_garage', garage_id=garage.id, car_id=car.id ">Contact Seller</a>
         </div>
       </div>
       <!-- /.row -->
