--- a/templates/main.html
+++ b/templates/main.html
@@ -21,16 +21,13 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container">
-  <a class="navbar-brand" href="#">Joe's Used Car Lot</a>
+  <a class="navbar-brand" href="{{url_for('category')}}">Joe's Used Car Lot</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#" id="text_title">About Us <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item dropdown" id="nav_li">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           BodyStyles
         </a>
@@ -49,7 +46,7 @@
         </div>
       </li>
     </ul>
-    <div class="login_link">
+    <div id="nav_li">
     {%if 'username' not in session%}
     <a href="{{url_for('showLogin')}}">Click Here to Log in</a>
     {%else%}
