--- a/templates/public_category_items.html
+++ b/templates/public_category_items.html
@@ -6,31 +6,30 @@
     <div class="container">
 
       <!-- Page Heading -->
-      <h1 class="my-4">Joe's Car Lot></h1>
-        <br>
-        <h3></h3><small>Category:  {{category.category}}</small>
-      </h3>
       <br>
+      <h3 class="my-4">Category:  {{category.category}}</h3>
+        <br>
+        
       
-      <a href="{{url_for('category')}}">Return</a>
+      <a href="{{url_for('category')}}"><h5>Return to Homepage</h5></a>
       
       {%for car in cars%}
 
       <div class="row">
         <div class="col-md-7">
           <a href="#">
-            <img class="#" src="{{category.category_pic}}" alt="">
+            <img class="#" src="{{car.car_item_pic}}" alt="">
           </a>
         </div>
         <div class="col-md-5">
           <h3><span> {{car.year}} </span><span> {{car.make}} </span><span> {{car.model}} </span></h3>
           <br>
-          <h3>{{car.price}}</h3>
+          <h6>Price: {{car.price}}</h6>
+          <h6>Milage: {{car.milage}}</h6>
           <br>
-          <p>{{car.description}}</p>
+          <p>Seller's Notes: {{car.description}}</p>
           <br>
-
-          <a {% if car.garage_id %} href="{{url_for('specific_car_garage', garage_id=car.garage_id, car_id=car.id)}}" {%else%} href="{{url_for('specific_car_category', category_id=category.id, car_id=car.id)}}" {%endif%}>Get Details</a>
+          <a {% if car.garage_id %} href="{{url_for('car_from_garage', garage_id=car.garage_id, car_id=car.id)}}" {%else%} href="{{url_for('car_from_category', category_id=category.id, car_id=car.id)}}" {%endif%}><h5>Get Details<h5></a>
           
         </div>
       </div>
